[tool.poetry]
name = "digitalyouth_itbound_bot"
version = "0.1.0"
description = ""
authors = ["TeaDove <peter.ibragimov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "2.12.1"
SQLAlchemy = "1.4.10"
pydantic = {extras = ["dotenv"], version = "^1.8.2"}
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
